# routers

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile.historian  Dockerfile.matcher  Dockerfile.orchestrator  Dockerfile.rpc  Justfile  PARTIAL_STATE_MATCHING.md  README.md  SPEC.md  buf.gen.yaml  buf.yaml  cliff.toml  clippy.toml  release-plz.toml
conformance/: Cargo.toml  Justfile  conform.just  conformance.toml  flake.nix  setup.just
conformance/configs/: all.toml  fmm.toml  graphhopper.toml  routers.toml  valhalla.toml
conformance/scripts/: pbf_to_shp.py  setup-fmm.sh  setup-graphhopper.sh  setup-valhalla.sh  start-fmm.sh  start-graphhopper.sh  start-valhalla.sh
conformance/src/: config.rs  init.rs  main.rs  metrics.rs  report.rs  runner.rs
conformance/src/matcher/: mod.rs  routers.rs
conformance/src/trace/: loader.rs  mod.rs
libs/routers_codec/: CHANGELOG.md  Cargo.toml  build.rs
libs/routers_codec/benches/: codec_sweep.rs  codec_target.rs
libs/routers_codec/src/: lib.rs
libs/routers_codec/src/osm/: graph.rs  mod.rs  parallel.rs  test.rs
libs/routers_codec/src/primitive/: edge.rs  mod.rs  node.rs
libs/routers_codec/tests/osm/: element.rs  iter.rs  mod.rs
libs/routers_geo/: CHANGELOG.md  Cargo.toml
libs/routers_geo/src/: cluster.rs  lib.rs  project.rs
libs/routers_geo/src/coord/: point.rs
libs/routers_grpc/: CHANGELOG.md  Cargo.toml  build.rs
libs/routers_grpc/examples/: client.rs  server.rs
libs/routers_grpc/src/: definition.rs  lib.rs  sdk.rs
libs/routers_grpc/src/services/: matcher.rs  mod.rs  optimise.rs  proximity.rs
libs/routers_network/: CHANGELOG.md  Cargo.toml
libs/routers_network/src/: graph.rs  lib.rs  mock.rs
libs/routers_network/src/primitive/: direction.rs  edge.rs  mod.rs  node.rs
libs/routers_network/src/traits/: calculable.rs  candidate.rs  data_plane.rs  discovery.rs  entry.rs  metadata.rs  mod.rs  network.rs  route.rs  scan.rs
libs/routers_realtime/: CHANGELOG.md  Cargo.toml  VISUALISER.md  justfile
libs/routers_realtime/examples/: amqp_bench.rs  build_shards.rs  nats_purge.rs  process.rs  replay.rs  replay_large.rs
libs/routers_realtime/src/: amqp.rs  assignment.rs  context.rs  event.rs  history.rs  lib.rs  metrics.rs  mock.rs  nats.rs  nats_ingest.rs  store.rs  telemetry.rs
libs/routers_realtime/src/bus/: mod.rs  nats.rs  trace.rs
libs/routers_realtime/src/store/: mod.rs  redis.rs
libs/routers_rpc/: CHANGELOG.md  Cargo.toml
libs/routers_rpc/examples/: client.rs  server.rs
libs/routers_rpc/src/: sdk.rs
libs/routers_rpc/src/services/: matcher.rs  mod.rs  optimise.rs  proximity.rs  timezone.rs
libs/routers_shard/: CHANGELOG.md  Cargo.toml  build.rs
libs/routers_shard/examples/: build_shards.rs  cache_speedup.rs  debug_match.rs  filter_sizes.rs  geohash_neighbours.rs  geohash_owned.rs  quadtree_cached.rs  quadtree_neighbours.rs  quadtree_owned.rs
libs/routers_shard/src/: auto.rs  composite.rs  error.rs  filter.rs  lib.rs  network.rs  osm.rs  selection.rs  source.rs
libs/routers_shard/src/composite/: mod.rs  network.rs
libs/routers_shard/src/loader/: fetcher.rs  file.rs  mod.rs  web.rs  window.rs
libs/routers_shard/src/strategy/: geohash.rs  mod.rs  quadtree.rs
libs/routers_shard/tests/: common.rs  composite.rs  geohash.rs  loader.rs  network.rs  osm_ingest.rs  padded.rs  quadtree.rs  selection.rs  window.rs
libs/routers_shard/tests/common/: mod.rs
libs/routers_transition/: CHANGELOG.md  Cargo.toml
libs/routers_transition/benches/: matching.rs
libs/routers_transition/examples/: batch.rs  streaming.rs
libs/routers_transition/src/: entity.rs  lib.rs
libs/routers_transition/src/candidate/: collapse.rs  entry.rs  graph.rs  ident.rs  mod.rs  route.rs  store.rs
libs/routers_transition/src/costing/: default.rs  emission.rs  mod.rs  transition.rs  util.rs
libs/routers_transition/src/map_path/: entity.rs  mod.rs  test.rs
libs/routers_transition/src/match/: definition.rs  implementation.rs  mod.rs
libs/routers_transition/src/matcher/: continuation.rs  entity.rs  mod.rs  trip.rs
libs/routers_transition/src/primitives/: cache.rs  cumulative.rs  error.rs  mod.rs  resolve.rs  routing.rs  weight_and_distance.rs
libs/routers_transition/src/solver/: all_compute.rs  expansion.rs  methods.rs  mod.rs  precompute_forward.rs  selective.rs  selective_forward.rs  state.rs  trellis_forward.rs  variant.rs
libs/routers_transition/src/trip/: entity.rs  test.rs
libs/routers_transition/src/weigh/: all_compute.rs  expansion.rs  mod.rs  selective.rs  variant.rs
libs/routers_transition/tests/: matching.rs  streaming.rs
libs/routers_trellis/: CHANGELOG.md  Cargo.toml
libs/routers_trellis/bench/: solver.rs
libs/routers_trellis/benches/: solver.rs
libs/routers_trellis/src/: backend.rs  lib.rs  path.rs  solved.rs  transition.rs  trellis.rs  types.rs
libs/routers_trellis/src/solver/: brute.rs  mod.rs  viterbi.rs
libs/routers_trellis/tests/: trellis.rs
libs/routers_tz/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
libs/routers_tz/src/: interface.rs  lib.rs
libs/routers_tz/src/storage/: basic.rs  mod.rs
libs/routers_viewer/: Cargo.toml  Trunk.toml  index.html  justfile
libs/routers_viewer/examples/: viewer.rs  web_viewer.rs
libs/routers_viewer/src/: _lib.rs  app.rs  lib.rs  main.rs  match_data.rs
libs/routers_viewer/src/components/: input.rs  map.rs  matcher.rs  mod.rs  results.rs  shell.rs  stack.rs
libs/routers_viewer/src/monitor/: app.rs  mod.rs  nats.rs  store.rs
libs/routers_viewer/src/plugins/: candidates.rs  chosen_path.rs  draw.rs  linestring.rs  mod.rs  shard.rs  trace.rs
libs/routers_viewer/src/utils/: colour.rs  component.rs  dimensions.rs  match_data.rs  mod.rs  state.rs  tiles.rs
libs/timezone/routers_tz/: Cargo.toml  build.rs
libs/timezone/routers_tz/benches/: discovery.rs
libs/timezone/routers_tz_build/: Cargo.toml  Justfile  build.rs
libs/timezone/routers_tz_types/: Cargo.toml
schema/: .gitignore  CHANGELOG.md  Cargo.toml
schema/proto/mvt/: mvt.proto
schema/src/: mod.rs
(+226 files in other folders)
