[workspace]
resolver = "2"
members = [
    "libs/routers_codec", "libs/routers_geo", "libs/routers_rpc",
    "libs/routers_shard", "libs/routers_tiles", "libs/routers_fixtures",
    "libs/routers_network", "libs/routers_viewer", "libs/routers_realtime",
    "libs/routers_tz", "libs/routers_tz_types",
    "conformance", "schema"
]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[patch.crates-io]
routers = { path = "." }
routers_network = { path = "libs/routers_network" }
routers_codec = { path = "libs/routers_codec" }
routers_geo = { path = "libs/routers_geo" }
routers_rpc = { path = "libs/routers_rpc" }
routers_shard = { path = "libs/routers_shard" }
routers_tiles = { path = "libs/routers_tiles" }
routers_fixtures = { path = "libs/routers_fixtures" }
routers_tz = { path = "libs/routers_tz" }
routers_tz_types = { path = "libs/routers_tz_types" }
routers_schema = { path = "schema" }

# === Workspace Deps ===
[workspace.dependencies]
# Private Members
routers_shard = { path = "libs/routers_shard", version = "0.1.0" }
routers_fixtures = { path = "libs/routers_fixtures" }

# Members
schema = { path = "schema", package = "routers_schema", version = "0.1.0" }
routers_codec = "0.1.2"
routers_geo = "0.1.0"
routers_rpc = "0.1.0"
routers_tiles = "0.1.0"
routers_network = "0.1.0"
routers_viewer = "0.1.0"
routers_realtime = "0.1.0"
routers_tz = { version = "0.1.0" }
routers_tz_types = "0.1.0"
routers = "0.2.1"

# Optimisation Crates
rayon = "1.10.0"
scc = "2.3.4"
itertools = "0.14.0"
indexmap = "2.9.0"
petgraph = { version = "0.8.2", features = ["serde-1", "graphmap", "rayon"] }
rustc-hash = "2.1.1"

# Logging
log = { version = "0.4.28" }
test-log = { version = "0.2.18", features = ["log"] }
anyhow = "1.0.102"
quick-error = "2.0.1"

# ConnectRPC
buffa = { version = "0.6.0", features = ["json"] }
buffa-types = { version = "0.6.0", features = ["json"] }
buffa-descriptor = { version = "0.6.0" }
connectrpc = { version = "0.6.0", default-features = false, features = [ "gzip", "streaming" ] }

serde_json = "1"
http-body = "1"

# Server/Paralellism
dotenv = { package = "dotenvy", version = "0.15.7" }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
] }

# GeoRust
geo = { version = "0.31.0", features = ["use-serde"] }
geo-index = { version = "0.3.1" }
geojson = { version = "0.24.2" }
s2 = { version = "0.0.13" }
wkt = { version = "0.14.0" }
rstar = { version = "0.12.2", features = ["serde"] }

# Tracing
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = [
    "tracing-log",
    "fmt",
    "env-filter",
] }
tracing-opentelemetry = { version = "0.30.0" }
opentelemetry = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = [
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.29.0", features = ["tls", "trace"] }
opentelemetry-stdout = { version = "0.29.0", features = ["trace", "logs", "metrics"] }

# Benchmarking
criterion = { version = "3.0.5", features = [
    "async_tokio",
], package = "codspeed-criterion-compat" }
insta = { version = "1.43.2", features = ["ron", "redactions"] }
ctor = "0.4.2"

# Utilities
strum = { version = "0.27.1", features = ["phf", "derive"] }
serde = { version = "1.0.228", features = [] }
postcard = { version = "1.1.3", features = ["alloc"] }
lazy_static = { version = "1.5.0" }
ouroboros = { version = "0.18.5" }
time-tz = { version = "2.0.0" }
thiserror = { version = "2.0.12" }

# Schema
bytes = { version = "1.10.1", features = ["default", "serde"] }
prost = "0.14.1"
prost-types = "0.14.1"
prost-build = "0.14.1"

# === Profiles ===
[profile.release]
opt-level = 3
lto = "fat"

[profile.bench]
codegen-units = 1
opt-level = 3
lto = "fat"

[profile.dev]
opt-level = 0
lto = "off"

[profile.dev.package."*"]
opt-level = 3

# === Root Package ===
[package]
name = "routers"
description = "Rust-Based Routing Tooling for System-Agnostic Maps."
readme = "README.md"
version = "0.2.5"
edition = "2024"
license = "GPL-3.0-or-later"
include = ["src/**/*", "readme.md"]

[lib]
name = "routers"
path = "src/lib.rs"
bench = false

# === Root Dependencies ===
[dependencies]
routers_network = { workspace = true }
routers_shard = { workspace = true, optional = true }

# Algorithm
rstar = { workspace = true }

petgraph = { workspace = true }
serde = { workspace = true }

# Root-Specific Crates
approx = "0.5.1"
pathfinding = "4.14.0"
measure_time = "0.9.0"
rustc-hash = { workspace = true }

# Logging Utility
log = { workspace = true }

# GeoRust
geo = { workspace = true }
wkt = { workspace = true }

# Tracing [Optional-"tracing"]
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# Optimisations and Compression
rayon = { workspace = true }
scc = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wkt = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }
routers_fixtures = { workspace = true }
routers_codec = { workspace = true }

[[bench]]
name = "map_match"
harness = false

[[bench]]
name = "total_ingestion"
harness = false

[[example]]
name = "shard_match"
required-features = ["shard"]

[features]
shard = ["dep:routers_shard"]
tracing = [
    "dep:tracing",
    "tracing-subscriber",
    "opentelemetry",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "opentelemetry-otlp",
]

[package.metadata.docs.rs]
features = []

[lints]
workspace = true
