[workspace]
resolver = "2"
members = [
    "libs/routers_codec", "libs/routers_geo", "libs/routers_rpc",
    "libs/routers_shard", "libs/routers_tiles", "libs/routers_fixtures",
    "libs/routers_network", "libs/routers_viewer", "libs/routers_realtime",
    "libs/routers_tz", "libs/routers_tz_types",
    "libs/routers_trellis", "libs/routers_transition",
    "conformance", "schema"
]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

# === Workspace Deps ===
[workspace.dependencies]
# Private Members (publish = false, path-only)
routers_fixtures = { path = "libs/routers_fixtures" }
routers_viewer = { path = "libs/routers_viewer" }

# Members
schema = { path = "schema", package = "routers_schema", version = "0.1.1" }
routers_codec = { path = "libs/routers_codec", version = "0.1.8" }
routers_geo = { path = "libs/routers_geo", version = "0.1.4" }
routers_rpc = { path = "libs/routers_rpc", version = "0.1.8" }
routers_tiles = { path = "libs/routers_tiles", version = "0.1.3" }
routers_network = { path = "libs/routers_network", version = "0.2.0" }
routers_shard = { path = "libs/routers_shard", version = "0.1.4" }
routers_realtime = { path = "libs/routers_realtime", version = "0.3.2" }
routers_tz = { path = "libs/routers_tz", version = "0.1.2" }
routers_tz_types = { path = "libs/routers_tz_types", version = "0.1.0" }
routers_trellis = { path = "libs/routers_trellis", version = "0.2.0" }
routers_transition = { path = "libs/routers_transition", version = "0.2.2" }
routers = { path = ".", version = "0.3.4" }

# Optimisation Crates
rayon = "1.10.0"
scc = "2.3.4"
itertools = "0.14.0"
indexmap = "2.9.0"
petgraph = { version = "0.8.2", features = ["serde-1", "graphmap", "rayon"] }
rustc-hash = "2.1.1"

# Logging
log = { version = "0.4.28" }
test-log = { version = "0.2.18", features = ["log"] }
anyhow = "1.0.102"
quick-error = "2.0.1"
env_logger = "0.11"

# ConnectRPC
buffa = { version = "0.6.0", features = ["json"] }
buffa-types = { version = "0.6.0", features = ["json"] }
buffa-descriptor = { version = "0.6.0" }
connectrpc = { version = "0.6.0", default-features = false, features = [ "gzip", "streaming" ] }

serde_json = "1"
http-body = "1"

# Server/Paralellism
dotenv = { package = "dotenvy", version = "0.15.7" }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
] }

# GeoRust
geo = { version = "0.31.0", features = ["use-serde"] }
geo-index = { version = "0.3.1" }
geojson = { version = "0.24.2" }
s2 = { version = "0.0.13" }
wkt = { version = "0.14.0" }
rstar = { version = "0.12.2", features = ["serde"] }

# Tracing
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = [
    "tracing-log",
    "fmt",
    "env-filter",
] }
tracing-opentelemetry = { version = "0.30.0" }
opentelemetry = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = [
    "rt-tokio",
    # Batch exports as spawned tokio tasks (fire & forget) instead of a
    # dedicated thread that blocks on each send.
    "experimental_trace_batch_span_processor_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.29.0", default-features = false, features = [
    "http-proto",
    # Async reqwest — the default `reqwest-blocking-client` serialises
    # exports behind blocking sends.
    "reqwest-client",
    "trace",
    "tls",
    "internal-logs",
] }
opentelemetry-stdout = { version = "0.29.0", features = ["trace", "logs", "metrics"] }

# Benchmarking
criterion = { version = "3.0.5", features = [
    "async_tokio",
], package = "codspeed-criterion-compat" }
insta = { version = "1.43.2", features = ["ron", "redactions"] }
ctor = "0.4.2"

# Utilities
strum = { version = "0.27.1", features = ["phf", "derive"] }
serde = { version = "1.0.228", features = [] }
postcard = { version = "1.1.3", features = ["alloc"] }
clap = { version = "4.6.1", features = [] }
url = { version = "2.5", features = [] }
lazy_static = { version = "1.5.0" }
ouroboros = { version = "0.18.5" }
time-tz = { version = "2.0.0" }
thiserror = { version = "2.0.12" }

# Schema
bytes = { version = "1.10.1", features = ["default", "serde"] }
prost = "0.14.1"
prost-types = "0.14.1"
prost-build = "0.14.1"

# === Profiles ===
[profile.release]
debug = 0
opt-level = 3
lto = "fat"

[profile.bench]
debug = 0
opt-level = 3
lto = "fat"

[profile.dev]
opt-level = 0
lto = "off"

[profile.bench.package."*"]
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

# === Root Package ===
[package]
name = "routers"
description = "Rust-Based Routing Tooling for System-Agnostic Maps."
readme = "README.md"
version = "0.3.4"
edition = "2024"
license = "GPL-3.0-or-later"
include = ["src/**/*", "readme.md"]

[lib]
name = "routers"
path = "src/lib.rs"
bench = false

# === Root Dependencies ===
[dependencies]
routers_network = { workspace = true }
routers_shard = { workspace = true }
routers_transition = { workspace = true }
routers_codec = { workspace = true }

serde = { workspace = true }

[dev-dependencies]
wkt = { workspace = true }
insta = { workspace = true }

criterion = { workspace = true }
routers_fixtures = { workspace = true }

geo = { workspace = true }

[[bench]]
name = "map_match"
harness = false

[[bench]]
name = "total_ingestion"
harness = false

[[example]]
name = "shard_match"
required-features = ["shard"]

[lints]
workspace = true
