[package]
name = "schema"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
buffa = { workspace = true }
buffa-types = { workspace = true }

connectrpc = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
http-body = { workspace = true }

[lib]
path = "src/mod.rs"

[lints.clippy]
all = "allow"
