[package]
name = "routers_schema"
version = "0.1.1"
edition = "2024"
include = ["src/**/*"]
description = "Protobuf Schema for Routers"
license = "GPL-3.0-or-later"
repository = "https://github.com/routers-org/routers"

[dependencies]
buffa = { workspace = true }
buffa-types = { workspace = true }
buffa-descriptor = { workspace = true }

connectrpc = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
http-body = { workspace = true }

[lib]
path = "src/mod.rs"

[lints.clippy]
all = "allow"
