[package]
name = "routers_codec"
version = "0.1.2"
edition = "2024"
include = ["docs/**", "build.rs", "proto/**", "src/**", "benches/**"]
description = "Encoding and Decoding Primitives for Routers"
license = "GPL-3"
repository = "https://github.com/routers-org/routers"

[lib]
name = "routers_codec"
path = "./src/lib.rs"
bench = false

[dependencies]
# Schema
prost = { workspace = true }
bytes = { workspace = true }

# GeoRust
geo = { workspace = true }
rstar = { workspace = true }

rayon = { workspace = true }
log = { workspace = true }

# Tracing
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
strum = { workspace = true }
itertools = { workspace = true }

# Compression
flate2 = { version = "1.1.2", features = ["zlib-rs"] }
mimalloc = { version = "0.1.46", optional = true }

# Misc.
# TODO: Remove dependency.
either = "1.15.0"
regex = "1.11.1"
bitflags = "2.9.1"

[dev-dependencies]
routers_fixtures = { workspace = true }

test-log = { workspace = true }
criterion = { workspace = true }

# Used to compare performance to ensure no large regression
osmpbf = { version = "0.3.5", features = ["zlib-ng"], default-features = false }

[build-dependencies]
prost-build = { version = "0.13.5" }

[[bench]]
name = "codec_sweep"
harness = false

[[bench]]
name = "codec_target"
harness = false

[features]
default = ["mimalloc"]

# Alternate Allocator (Applies to #[global_allocator])
mimalloc = ["dep:mimalloc"]

# Tracing (For Debugging & Logging)
tracing = ["dep:tracing", "dep:tracing-subscriber"]
