[package]
name = "routers_geo"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Geospatial Utilities for Routers"

[dependencies]
log = { version = "0.4.27", features = [] }
strum = { workspace = true }

geo = { workspace = true }
wkt = { workspace = true }
geohash = "0.13.1"

schema = { workspace = true }

[features]
tile = []

[lints]
workspace = true
