[package]
name = "routers_grpc"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "gRPC Endpoints for Routers"

[lib]
name = "routers_grpc"
path = "src/lib.rs"
bench = false

[dependencies]
routers = { workspace = true }
routers_codec = { workspace = true }

# Protobuf Handling
prost = { workspace = true }
prost-types = { workspace = true }

# gRPC Server Dependencies
tonic = { workspace = true }
tonic-prost = { workspace = true }

# GeoRust
geo = { workspace = true }
wkt = { workspace = true }

log = { workspace = true }
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }

tracing-opentelemetry = { workspace = true, optional = true }

# Misc.
derive_builder = "0.20.2"

[dev-dependencies]
# Server Example
tower-http = { workspace = true }
tonic-reflection = { workspace = true }
tonic-web = { workspace = true }

# Environment Variable Resolution
dotenv = { workspace = true }

# Workspace Crates
routers_fixtures = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }
tonic-prost = { workspace = true }
walkdir = "2.5.0"

[features]
default = []
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-stdout",

    "dep:tracing-opentelemetry"
]

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["telemetry"]

[lints]
workspace = true
