[package]
name = "routers_grpc"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"
description = "gRPC Endpoints for Routers"

[lib]
name = "routers_grpc"
path = "src/lib.rs"
bench = false

[dependencies]
routers = { workspace = true }
routers_codec = { workspace = true }
routers_network = { workspace = true }
schema = { workspace = true }

# Protobuf Handling
buffa = { workspace = true }
connectrpc = { workspace = true }

# GeoRust
geo = { workspace = true }

log = { workspace = true }
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }

tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
# Client + server examples need the corresponding connectrpc features.
connectrpc = { workspace = true, features = ["client", "server"] }

wkt = { workspace = true }

# Environment Variable Resolution
dotenv = { workspace = true }

# Workspace Crates
routers_fixtures = { workspace = true }

[features]
default = []
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-stdout",

    "dep:tracing-opentelemetry"
]

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["telemetry"]

[lints]
workspace = true
