[package]
name = "routers_network"
version = "0.1.4"
edition = "2024"
description = "Network Primitives for Routers"
license = "GPL-3.0-or-later"

[dependencies]
geo = { workspace = true, features = ["serde"] }
rstar = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true, optional = true }

num-traits = "0.2"

[dev-dependencies]

[features]
fixtures = []
tracing = ["dep:tracing"]

[lints]
workspace = true
