[package]
name = "routers_network"
version = "0.1.4"
edition = "2024"
description = "Network Primitives for Routers"
license = "GPL-3.0-or-later"

[dependencies]
geo = { workspace = true, features = ["serde"] }
rstar = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true, optional = true }

num-traits = "0.2"

# Enabled only by the `testing` feature (and always as dev-deps for this crate's
# own tests) to back the `mock` test-support network.
rustc-hash = { workspace = true, optional = true }
petgraph = { workspace = true, optional = true }

[dev-dependencies]
rustc-hash = { workspace = true }
petgraph = { workspace = true }

[features]
fixtures = []
tracing = ["dep:tracing"]
# Exposes `routers_network::mock` (MockNetwork/MockNetworkBuilder) as reusable
# test-support for downstream crates (e.g. routers_transition integration tests).
testing = ["dep:rustc-hash", "dep:petgraph"]

[lints]
workspace = true
