[package]
name = "routers_realtime"
version = "0.2.0"
edition = "2024"
description = "A Demonstration for Real-Time Map Matching"
license = "GPL-3.0-or-later"

[dependencies]
# Internal Crates
routers_codec = { workspace = true }
routers_network = { workspace = true }
routers_shard = { workspace = true }
routers_transition = { workspace = true }

# Logging & Telemetry
# env_logger remains for the bins outside the traced pipeline (replay, historian).
env_logger = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { version = "0.4.44", features = ["serde"] }
humantime = "2.1"
web-time = "1"

# Utilities
futures = "0.3.32"
tokio = { workspace = true }
itertools = "0.12"
clap = { workspace = true, features = ["derive", "env"] }
url = { workspace = true }
geo = { workspace = true, features = ["serde"] }
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"

# Serialization
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true }

# Systems
async-nats = "0.38.0"
redis = { version = "0.29", features = ["tokio-comp", "streams"] }
polars = { version = "0.46", default-features = false, features = ["lazy", "csv", "strings", "dtype-full"] }

[lints]
workspace = true

[[bin]]
name = "replay"
path = "bin/replay.rs"

[[bin]]
name = "orchestrator"
path = "bin/orchestrator.rs"

[[bin]]
name = "matcher"
path = "bin/matcher.rs"

[[bin]]
name = "historian"
path = "bin/historian.rs"
