[package]
name = "routers_shard"
version = "0.1.0"
edition = "2024"

# Currently Private
publish = false

[dependencies]
routers_network = { workspace = true }
routers_codec = { workspace = true, optional = true }

geo = { workspace = true }
rstar = { workspace = true }
petgraph = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }

# The browser fetcher uses `web-sys::fetch` directly so we don't drag in a
# heavy HTTP client just for `Vec<u8>` blob retrieval. Wasm-only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "Response",
    "Window",
] }

[features]
default = ["osm"]
osm = ["dep:routers_codec"]

[dev-dependencies]
routers_fixtures = { workspace = true }
routers_codec = { workspace = true }
env_logger = "0.11"
tokio = { workspace = true }

[lints]
workspace = true
