[package]
name = "routers_shard"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Sharding Primitives for Routers"
repository = "https://github.com/routers-org/routers"

[dependencies]
routers_network = { workspace = true }
routers_codec = { workspace = true, optional = true }

# Logging
env_logger = { workspace = true }
log = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Geography
geo = { workspace = true }
rstar = { workspace = true }
petgraph = { workspace = true }

# Utilities
rustc-hash = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }

# `web_time::Instant` is a drop-in replacement for `std::time::Instant` that
# works on `wasm32-unknown-unknown` (where `std::time` panics). On native
# it just re-exports the std type, so there's no cost.
web-time = "1"

# The browser fetcher uses `web-sys::fetch` directly so we don't drag in a
# heavy HTTP client just for `Vec<u8>` blob retrieval. Wasm-only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "Response",
    "Window",
] }

[features]
default = ["osm"]
osm = ["dep:routers_codec"]

[dev-dependencies]
routers_fixtures = { workspace = true }
routers_codec = { workspace = true }
routers = { workspace = true }

wkt = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "generate-shards"
path = "bin/generate-shards.rs"

[lints]
workspace = true
